shellfirm/tests/snapshots/checks__network-bring-down-interface.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "ifconfig eth0 down",
        check_detection_ids: [
            "network:bring_down_interface",
        ],
        test_description: "match command with ifconfig",
    },
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "sudo ifconfig eth0 down",
        check_detection_ids: [
            "network:bring_down_interface",
        ],
        test_description: "match command with sudo and ifconfig",
    },
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "ip link set eth0 down",
        check_detection_ids: [
            "network:bring_down_interface_ip",
        ],
        test_description: "match command with ip link",
    },
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "sudo ip link set eth0 down",
        check_detection_ids: [
            "network:bring_down_interface_ip",
        ],
        test_description: "match command with sudo and ip link",
    },
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "ifconfig eth0 up",
        check_detection_ids: [],
        test_description: "should not match up command",
    },
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "ip link set eth0 up",
        check_detection_ids: [],
        test_description: "should not match up command with ip link",
    },
    TestSensitivePatternsResult {
        file_path: "network-bring-down-interface.yaml",
        test: "ifconfig wlan0 down",
        check_detection_ids: [
            "networking:ifconfig_interface_down",
        ],
        test_description: "match ifconfig bringing wifi interface down",
    },
]
