shellfirm/tests/snapshots/checks__network-force-reset-firewall.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "network-force-reset-firewall.yaml",
        test: "ufw --force reset",
        check_detection_ids: [
            "network:force_reset_firewall",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "network-force-reset-firewall.yaml",
        test: "sudo ufw --force reset",
        check_detection_ids: [
            "network:force_reset_firewall",
        ],
        test_description: "match command with sudo",
    },
    TestSensitivePatternsResult {
        file_path: "network-force-reset-firewall.yaml",
        test: "ufw reset",
        check_detection_ids: [],
        test_description: "match ufw reset without force flag",
    },
    TestSensitivePatternsResult {
        file_path: "network-force-reset-firewall.yaml",
        test: "ufw status",
        check_detection_ids: [],
        test_description: "should not match status command",
    },
]
