shellfirm/tests/snapshots/checks__networking-iptables_flush.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "networking-iptables_flush.yaml",
        test: "iptables -F",
        check_detection_ids: [
            "network:flush_iptables",
        ],
        test_description: "match iptables flush command",
    },
    TestSensitivePatternsResult {
        file_path: "networking-iptables_flush.yaml",
        test: "sudo iptables -F",
        check_detection_ids: [
            "network:flush_iptables",
        ],
        test_description: "match iptables flush with sudo",
    },
    TestSensitivePatternsResult {
        file_path: "networking-iptables_flush.yaml",
        test: "iptables -L",
        check_detection_ids: [],
        test_description: "should not match list command",
    },
]
